Added missing translations

--- a/src/BuilderBundle/Resources/translations/messages.pl.yml
+++ b/src/BuilderBundle/Resources/translations/messages.pl.yml
@@ -3,3 +3,11 @@ security:
     username: login
 
 general: Wystąpił błąd wewnętrzny systemu. Spróbuj ponownie później.
+
+permission_denied: Brak dostępu.
+
+user:
+  not_unique: Użytkownik nie jest unikalny.
+
+params:
+  not_enough: Brak wystarczających parametrów.
